--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light;
-  color: inherit;
+  color: #333;
   background-color: #ffffff;
 
   font-synthesis: none;
